# campused-backend

./: .env.example  .gitignore  main.py  manage.py  pyproject.toml
api/: api_url.py
api/about/: apps.py  models.py  serializers.py  urls.py  views.py
api/channel/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
api/channel/middleware/: token_usage_middleware.py
api/subscriptions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/user/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
campused/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
metrics/: prometheus.yml  prometheus_grafana_compose.yml
utils/: forgot_password.py  send_html_email.py
utils/auth/: account_activation.py  send_html_email.py
utils/file_logic/: file_loader.py  file_saver.py
utils/files/: activation_email.html  reset_password_email.html
utils/openai_logic/: client_create.py  exam_generation.py  image_analyze.py  text_generation.py  token_calculation.py
utils/render_files/: activation_email.html  reset_password_email.html
utils/subscription_logic/: main.py
